# api/docs/swagger.json
@@ -2428,14 +2428,6 @@
                 }
             }
         },
-        "config.TranscoderConfig": {
-            "type": "object",
-            "properties": {
-                "ffmpeg_path": {
-                    "type": "string"
-                }
-            }
-        },
         "config.WatermarksConfig": {
             "type": "object",
             "properties": {
@@ -2535,6 +2527,8 @@
         "domain.EventType": {
             "type": "string",
             "enum": [
+                "session.opened",
+                "session.closed",
                 "stream.created",
                 "stream.updated",
                 "stream.started",
@@ -2568,9 +2562,7 @@
                 "template.updated",
                 "template.deleted",
                 "stream.runtime_created",
-                "stream.runtime_expired",
-                "session.opened",
-                "session.closed"
+                "stream.runtime_expired"
             ],
             "x-enum-comments": {
                 "EventDVRSegmentPruned": "retention loop deleted an aged-out segment",
@@ -2587,6 +2579,8 @@
                 "EventStreamUpdated": "PUT /streams/{code} on existing record"
             },
             "x-enum-descriptions": [
+                "",
+                "",
                 "",
                 "PUT /streams/{code} on existing record",
                 "",
@@ -2620,11 +2614,11 @@
                 "",
                 "",
                 "",
-                "",
-                "",
                 ""
             ],
             "x-enum-varnames": [
+                "EventSessionOpened",
+                "EventSessionClosed",
                 "EventStreamCreated",
                 "EventStreamUpdated",
                 "EventStreamStarted",
@@ -2658,9 +2652,7 @@
                 "EventTemplateUpdated",
                 "EventTemplateDeleted",
                 "EventStreamRuntimeCreated",
-                "EventStreamRuntimeExpired",
-                "EventSessionOpened",
-                "EventSessionClosed"
+                "EventStreamRuntimeExpired"
             ]
         },
         "domain.GlobalConfig": {
@@ -2692,9 +2684,6 @@
                 },
                 "sessions": {
                     "$ref": "#/definitions/config.SessionsConfig"
-                },
-                "transcoder": {
-                    "$ref": "#/definitions/config.TranscoderConfig"
                 },
                 "watermarks": {
                     "$ref": "#/definitions/config.WatermarksConfig"
@@ -3788,9 +3777,6 @@
                                     "$ref": "#/definitions/domain.AudioCodec"
                                 }
                             }
-                        },
-                        "ffmpeg_path": {
-                            "type": "string"
                         },
                         "global": {
                             "type": "object",
